--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,11 @@
       <%= link_to "Capstone Design", '#', id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Sign in", '#' %></li>
+          <% if logged_in? %>
+            <li><%= link_to "Log out", logout_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to "Sign in", login_path %></li>
+          <% end %>
         </ul>
       </nav>
     </div>
