--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,5 +1,15 @@
 <p id="notice"><%= notice %></p>
 
+<% if logged_in? && !on_team?(@team) %>
+  <%= form_for JoinTeamContract.new do |f| %>
+    <%= f.hidden_field :team_id, value: @team.id %>
+    <%= f.hidden_field :student_id, value: @current_student.id %>
+    <%= f.hidden_field :team_accepted, value: false %>
+    <%= f.hidden_field :student_accepted, value: true %>
+    <%= f.submit %>
+  <% end %>
+<% end %>
+
 <p>
   <strong>Name:</strong>
   <%= @team.name %>
