Reconfigured layout for main student login page and added bootstrap support to rails.

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -9,24 +9,52 @@
   </li>
 </ul>
 
-<div class="well">
-	<h2 style="font-size: 24px">Team Information for
-		<%= @student.first_name %>
-		<%= @student.last_name %>
-	</h2><hr />
+<div class="panel panel-primary">
+	<div class="panel-heading">
+		<div class="panel-heading">
+			<h3 class="panel-title">
+				Team Information for
+				<%= @student.first_name %>
+				<%= @student.last_name %>
+			</h3>
+		</div>
+	</div>
 	
-	<p>
-		<strong><span class="label label-primary" style="font-size: 16px">Team Name:</span></strong>
-		<%= @student.team_id %>
-	</p>
-	<p>
-		<strong><span class="label label-primary" style="font-size: 16px">Team Members:</span></strong>
-		<%= @student.team_id %>
-	</p>
-	<p>
-		<strong><span class="label label-primary" style="font-size: 16px">Point of Contact:</span></strong>
-		<%= @student.team_id %>
-	</p>
+	<div class="panel-body">
+		<div class="list-group">
+		  <a href="#" class="list-group-item">
+			<h4 class="list-group-item-heading">Team Name</h4>
+			<p class="list-group-item-text">
+				<strong>Team Name Goes Here</strong>
+			</p>
+		  </a>
+		</div>
+		
+		<div class="list-group">
+		  <a href="#" class="list-group-item">
+			<h4 class="list-group-item-heading">Team Members</h4>
+			<p class="list-group-item-text">
+				<ul>
+					<li><strong>Name 1</strong></li>
+					<li><strong>Name 2</strong></li>
+					<li><strong>Name 3</strong></li>
+					<li><strong>Name 4</strong></li>
+					<li><strong>Name 5</strong></li>
+				</ul>
+			</p>
+		  </a>
+		</div>
+		
+		<div class="list-group">
+		  <a href="#" class="list-group-item">
+			<h4 class="list-group-item-heading">Point of Contact</h4>
+			<p class="list-group-item-text">
+				<strong>Name:</strong><br />
+				<strong>Email:</strong>
+			</p>
+		  </a>
+		</div>
+	</div>
 </div>
 
 <ul class="nav nav-pills">
