--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -57,6 +57,64 @@
 	</div>
 </div>
 
+<div class="panel panel-primary">
+	<div class="panel-heading">
+		<div class="panel-heading">
+			<h3 class="panel-title">Project Information</h3>
+		</div>
+	</div>
+	
+	<div class="panel-body">
+		<div class="list-group">
+		  <a href="#" class="list-group-item">
+			<h4 class="list-group-item-heading">Active Project</h4>
+			<p class="list-group-item-text">
+				<strong>Project Name:</strong><br />
+				<strong>Project Details:</strong>
+			</p><br />
+			<div class="alert alert-info" role="alert">
+				Your team currently has no active project.
+			</div>
+		  </a>
+		</div>
+		
+		<div class="list-group">
+		  <a href="#" class="list-group-item">
+			<h4 class="list-group-item-heading">Active Bids</h4><br />
+			<p class="list-group-item-text">
+				<table class="table" style="border: 1px solid rgb(221, 221, 221)">
+					<thead>
+						<tr>
+							<th>Bid #</th>
+							<th>Priority</th>
+							<th>Project Name</th>
+							<th>Sponsor</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1</td>
+							<td>2</td>
+							<td>Sample Name 1</td>
+							<td>Sample Sponsor 1</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td>1</td>
+							<td>Sample Name 2</td>
+							<td>Sample Sponsor 2</td>
+						</tr>
+					</tbody>
+				</table>
+			</p><br />
+			<div class="alert alert-info" role="alert">
+				Your team currently has no active bids.
+			</div>
+		  </a>
+		</div>
+	</div>
+</div>
+
 <ul class="nav nav-pills">
 	<li role="presentation">
 		<%= link_to 'Back', students_path %>
