--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -2,7 +2,11 @@
 
 /* mixins, variables, etc. */
 
+$gray: #555;
+$grayLight: #999;
+$grayLighter: #eee;
 $grayMediumLight: #eaeaea;
+$grayDarker: #222;
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
