--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -19,6 +19,14 @@
     <%= f.label :last_name %><br>
     <%= f.text_field :last_name %>
   </div>
+  <div class="field">
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
+  </div> 
+  <div class="field">
+    <%= f.label :interests %><br>
+    <%= f.text_area :interests, :cols => "30", :rows => "10" %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
