Updated team list page and student list page.

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -167,7 +167,7 @@
 			</a>
 		</div>
 		<div class="alert alert-info" role="alert">
-			Your team currently has no active project. <a href="#">Find a project to bid on.</a>
+			Your team currently has no active project. <%= link_to "Find a project to bid on.", bid_path() %>
 		</div>
 	</div>
 </div>
