--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,27 +1,41 @@
 <h1>Listing teams</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<ul class="nav nav-pills">
+	<li role="presentation" class="active"><%= link_to 'Home', students_path %></li>
+	<li role="presentation"><%= link_to 'Create New Team', new_team_path %></li>
+</ul><br />
 
-  <tbody>
-    <% @teams.each do |team| %>
-      <tr>
-        <td><%= team.name %></td>
-        <td><%= link_to 'Show', team %></td>
-        <td><%= link_to 'Edit', edit_team_path(team) %></td>
-        <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <div class="panel-title">
+      List of Teams
+    </div>
+  </div>
+  <div class="panel-body">
+    <table class="table" style="border: 1px solid rgb(221, 221, 221)">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Project</th>
+          <th>Point of Contact</th>
+          <th>Number of Members</th>
+          <th>Creation Date</th>
+        </tr>
+      </thead>
 
-<br>
-
-<%= link_to 'New Team', new_team_path %>
+      <tbody>
+        <% @teams.each do |team| %>
+          <tr>
+            <td><%= team.name %></td>
+            <td>Random Project Name</td>
+            <td><%= team.point_of_contact.first_name + ' ' +
+                    team.point_of_contact.last_name %></td>
+                <% team_id = team.id %>
+            <td><%= Student.where("team_id = team_id").length %></td>
+            <td><%= team.created_at %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
