Filled out Technical and Director fields

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -33,18 +33,52 @@
 					<div class="control-group string optional project_company_technical_name">
 						<label class="string optional control-label" for="project_company_attributes_technical_name">Name</label>
 						<div class="controls">
-							<input class="string optinal" id="project_company_attributes_technical_name" name="project[company_attributes][technical_name]" size="50" type="text">
+							<input class="string optional" id="project_company_attributes_technical_name" name="project[company_attributes][technical_name]" size="50" type="text">
 						</div>
 					</div>
 					<div class="control-group string optional project_company_technical_designation">
+						<label class="string optional control-label" for="project_company_attributes_technical_designation">Designation</label>
+						<div class="controls">
+							<input class="string optional" id="project_company_attributes_technical_designation" name="project[company_attributes][technical_designation]" size="50" type="text">
+						</div>
 					</div>
-					<div class="control-group string optional project_company_technical_email">
-					</div>
-					<div class="control-group email optional project_company_technical_name">
+					<div class="control-group email optional project_company_technical_email">
+						<label class="email optional control-label" for="project_company_attributes_technical_email">Email</label>
+						<div class="controls">
+							<input class="string email optional" id="project_company_attributes_technical_email" name="project[company_attributes][technical_email]" size="50" type="email">
+						</div>
 					</div>
 					<div class="control-group tel optional project_company_technical_name">
+						<label class="tel optional control-label" for="project_company_attributes_technical_name">Phone Number</label>
+						<div class="controls">
+							<input class="string tel optional" id="project_company_attributes_technical_name" name="project[company_attributes][technical_name]" size="50" type="tel">
+						</div>
 					</div>
 					<h5>Director Contact</h5>
+					<div class="control-group string optional project_company_director_name">
+						<label class="string optional control-label" for="project_company_attributes_director_name">Name</label>
+						<div class="controls">
+							<input class="string optional" id="project_company_attributes_director_name" name="project[company_attributes][director_name]" size="50" type="text">
+						</div>
+					</div>
+					<div class="control-group string optional project_company_director_designation">
+						<label class="string optional control-label" for="project_company_attributes_director_designation">Designation</label>
+						<div class="controls">
+							<input class="string optional" id="project_company_attributes_director_designation" name="project[company_attributes][director_designation]" size="50" type="text">
+						</div>
+					</div>
+					<div class="control-group email optional project_company_director_email">
+						<label class="email optional control-label" for="project_company_attributes_director_email">Email</label>
+						<div class="controls">
+							<input class="string email optional" id="project_company_attributes_director_email" name="project[company_attributes][director_email]" size="50" type="email">
+						</div>
+					</div>
+					<div class="control-group tel optional project_company_director_name">
+						<label class="tel optional control-label" for="project_company_attributes_director_name">Phone Number</label>
+						<div class="controls">
+							<input class="string tel optional" id="project_company_attributes_director_name" name="project[company_attributes][director_name]" size="50" type="tel">
+						</div>
+					</div>
 				</div>
 				<div class="well">
 					<h3>Project Information</h3>
