--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Listing teams</h1>
 
 <ul class="nav nav-pills">
-	<li role="presentation" class="active"><%= link_to 'Home', students_path %></li>
+	<li role="presentation" class="active"><%= link_to 'Home', students_path(@student) %></li>
 	<li role="presentation"><%= link_to 'Create New Team', new_team_path %></li>
 </ul><br />
 
