--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -26,13 +26,13 @@
 	<div class="panel-body">
 		<div class="list-group">
 		  <a href="#" class="list-group-item">
-			<h4 class="list-group-item-heading">Email Address</h4>
-			<%= @student.email %>
+				<h4 class="list-group-item-heading">Email Address</h4>
+				<%= @student.email %>
 		  </a>
 		</br>
 		  <a href="#" class="list-group-item">
-		<h4 class="list-group-item-heading">Interests</h4> 
-		<%= @student.interests %>
+				<h4 class="list-group-item-heading">Interests</h4> 
+				<%= @student.interests %>
 		  </a>
 		</div>
 	</div>
@@ -113,6 +113,51 @@
 				</div>
 			</a>
 		</div>
+		
+	<% if @student == team.point_of_contact and team.students.length == 1 %>
+		<div class="row">
+			<div class="col col-md-6">
+				<div class="list-group">
+					<div class="list-group-item">
+						<h4>Leave Team</h4>
+						Note that once all members have left the team, it will be automatically deleted.
+						You will no longer be able to work on your team's project.<br /><br />
+						<button class="btn btn-danger" role="button">
+							<%= link_to 'Leave Team', team_path(id: @student.team_id),  
+										data: { confirm: 'Are you sure you want to delete your current team?' },
+										:style=>'color:#FFFFFF;', :class => "css_class" %>
+						</button>
+					</div>
+				</div>
+			</div>
+			<div class="col col-md-6">
+				<div class="list-group">
+					<div class="list-group-item">
+						<h4>Delete Team</h4>
+						As a point of contact, you can delete your team if you are the only member on your team.<br /><br />
+						<button class="btn btn-danger" role="button">
+							<%= link_to 'Delete Team', team_path(id: @student.team_id), method: :delete, 
+										data: { confirm: 'Are you sure you want to delete your current team?' },
+										:style=>'color:#FFFFFF;', :class => "css_class" %>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	<% else %>
+		<div class="list-group">
+			<div class="list-group-item">
+				<h4>Leave Team</h4>
+				Note that once all members have left the team, it will be automatically deleted.
+				You will no longer be able to work on your team's project.<br /><br />
+				<button class="btn btn-danger" role="button">
+					<%= link_to 'Leave Team', team_path(id: @student.team_id),  
+								data: { confirm: 'Are you sure you want to delete your current team?' },
+								:style=>'color:#FFFFFF;', :class => "css_class" %>
+				</button>
+			</div>
+		</div>
+	<% end %>
 		
 	<% else %>
 		<div class="alert alert-info" role="alert">
